# openresty-win32-build-bak

./: .gitignore  README.md
openresty-1.13.6.2/bundle/ngx_devel_kit-0.3.0/src/: ndk_complex_path.c  ndk_encoding.c  ndk_string.c
openresty-1.13.6.2/bundle/ngx_lua-0.10.13/src/: ngx_http_lua_initworkerby.c  ngx_http_lua_semaphore.c  ngx_http_lua_socket_tcp.c  ngx_http_lua_socket_tcp.h  ngx_http_lua_socket_udp.c
openresty-1.13.6.2/bundle/ngx_stream_lua-0.0.5/src/: ngx_stream_lua_initworkerby.c  ngx_stream_lua_socket_tcp.c
openresty-1.13.6.2/config/: ngx_auto_config.h  ngx_modules.c
openresty-1.13.6.2/msvc/: nginx-win32.vcxproj  nginx-win32.vcxproj.filters  nginx-win32_vc141.vcxproj  nginx-win32_vc141.vcxproj.filters  nginx_win32.aps  nginx_win32.rc  openresty-win32.sln
openresty-1.13.6.2/msvc/Release/nginx_win32.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nginx_win32.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
openresty-1.13.6.2/src/nginx/src/core/: nginx.c  nginx.h  ngx_array.h  ngx_conf_file.c  ngx_connection.c  ngx_connection.h  ngx_crc32.h  ngx_cycle.c  ngx_cycle.h  ngx_inet.c  ngx_log.c  ngx_palloc.h  ngx_resolver.c
openresty-1.13.6.2/src/nginx/src/event/: ngx_event.c  ngx_event.h  ngx_event_accept.c  ngx_event_acceptex.c  ngx_event_connect.h  ngx_event_connectex.c  ngx_event_openssl.c  ngx_event_openssl.h  ngx_event_openssl_stapling.c  ngx_event_opensslex.c
openresty-1.13.6.2/src/nginx/src/http/: ngx_http.c  ngx_http_request.c  ngx_http_requestex.c  ngx_http_upstream.c  ngx_http_upstream.h  ngx_http_variables.c
openresty-1.13.6.2/src/nginx/src/mail/: ngx_mail_proxy_module.c
openresty-1.13.6.2/src/nginx/src/stream/: ngx_stream.c  ngx_stream.h  ngx_stream_handlerex.c  ngx_stream_proxy_module.c  ngx_stream_upstream.h  ngx_stream_upstream_round_robin.h
openresty-nginx/bundle/LuaJIT-2.0.5/: CMakeLists.txt
openresty-nginx/bundle/LuaJIT-2.0.5/src/: msvcbuild.bat
openresty-nginx/bundle/LuaJIT-2.1.0-beta3/src/: msvcbuild.bat
openresty-nginx/bundle/LuaJIT-2.1.0-beta3/src/host/: buildvm_arch.h
openresty-nginx/bundle/lua-5.1.5/src/: lua51.lib
openresty-nginx/bundle/lua-cjson-2.1.0.7rc1/: lua_cjson.c
openresty-nginx/bundle/lua-nginx-module-0.10.14/src/: ngx_http_lua_accessby.c  ngx_http_lua_common.h  ngx_http_lua_contentby.c  ngx_http_lua_control.c  ngx_http_lua_initworkerby.c  ngx_http_lua_rewriteby.c  ngx_http_lua_socket_tcp.c  ngx_http_lua_socket_udp.c
openresty-nginx/bundle/luasocket-master/: mime.vcxproj  socket.vcxproj
openresty-nginx/bundle/ngx_devel_kit-0.3.0/objs/: ndk_config.h
openresty-nginx/bundle/ngx_devel_kit-0.3.1rc1/objs/: ndk_config.h
openresty-nginx/bundle/ngx_devel_kit-0.3.1rc1/src/: ndk_complex_path.c  ndk_encoding.c  ndk_string.c
openresty-nginx/bundle/ngx_lua-0.10.13/src/: ngx_http_lua_contentby.c  ngx_http_lua_req_body.c  ngx_http_lua_socket_tcp.c  ngx_http_lua_socket_udp.c
openresty-nginx/bundle/ngx_stream_lua-0.0.5/src/: ngx_stream_lua_contentby.c  ngx_stream_lua_control.c  ngx_stream_lua_prereadby.c  ngx_stream_lua_socket_tcp.c
openresty-nginx/bundle/stream-echo-nginx-module-master/src/: ngx_stream_echo_module.c
openresty-nginx/bundle/stream-gate-nginx-module/: README.md
openresty-nginx/bundle/stream-gate-nginx-module/src/: ngx_stream_gate_module.c
openresty-nginx/bundle/stream-lua-nginx-module-0.0.6/src/: ngx_stream_lua_common.h  ngx_stream_lua_contentby.c  ngx_stream_lua_control.c  ngx_stream_lua_initworkerby.c  ngx_stream_lua_prereadby.c  ngx_stream_lua_request.h  ngx_stream_lua_semaphore.c  ngx_stream_lua_socket_tcp.c  ngx_stream_lua_socket_tcp.h
openresty-nginx/config/: ngx_auto_config.h  ngx_modules.c
openresty-nginx/msvc/: nginx-win32.aps  nginx-win32.vcxproj  nginx-win32.vcxproj.filters  nginx-win32_vc141.vcxproj  nginx-win32_vc141.vcxproj.filters  openresty-win32_vc141.sln  openresty_ffi.def  resource.h
openresty-nginx/src/nginx/: RCa07880
openresty-nginx/src/nginx/src/core/: nginx.h  ngx_array.c  ngx_config.h  ngx_connection.c  ngx_connectionex.c  ngx_core.h  ngx_crc32.c  ngx_cycle.c  ngx_log.c  ngx_log.h  ngx_palloc.c  ngx_resolver.c  ngx_times.c
openresty-nginx/src/nginx/src/event/: ngx_event.h  ngx_event_accept.c  ngx_event_acceptex.c  ngx_event_connect.c  ngx_event_connect.h  ngx_event_connectex_win32.c  ngx_event_openssl.c  ngx_event_openssl.h  ngx_event_openssl_stapling.c  ngx_event_opensslex.c  ngx_event_posted.c  ngx_event_posted.h
openresty-nginx/src/nginx/src/http/: ngx_http_core_module.c  ngx_http_request.c  ngx_http_request_body.c  ngx_http_requestex.c  ngx_http_upstream.c
openresty-nginx/src/nginx/src/mail/: ngx_mail_auth_http_module.c  ngx_mail_handler.c  ngx_mail_proxy_module.c  (+1 more)
(+40 files in other folders)
